# rust-wasm

./: README.md  package.json
react-client-ts/: config-overrides.js  package.json  tsconfig.json
react-client-ts/public/: index.html
react-client-ts/src/: App.tsx  index.tsx
react-client-ts/src/core/: index.tsx
react-client-ts/src/hooks/: index.ts  useWasm.ts
react-client-ts/src/middlewares/: index.ts  wasm.tsx
react-client-ts/src/models/: test.ts
react-client-ts/src/pages/404/: NotFound.tsx
react-client-ts/src/pages/home/: index.tsx
react-client-ts/src/pages/layouts/: LodingCom.tsx  PrimaryRouter.tsx
react-client-ts/src/service/: wasm.ts
react-client-ts/src/utils/: getter.ts  index.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
